# AI-assistant

./: .gitignore  README.md  pyproject.toml
astra/: __init__.py
astra/agent/: __init__.py  audit.py  config.py  executor.py  intent_parser.py  main.py  model_router.py  privacy.py  utils.py
astra/models/: __init__.py  cloud_adapter.py  local_mistral_adapter.py
astra/skills/: __init__.py  manage_service.py  open_app.py  run_command.py
astra/stt/: __init__.py  ptt_cli.py  whisper_service.py
astra/tts/: __init__.py  tts_engine.py
infra/systemd/: astra.service
